easter egg KIKI

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="containerQuaso"></div>
     <div id="containerMe"></div>
+    <div id="containerKiki"></div>
 
     <!-- LEFT MENU -->
     <menu id="left-menu">
@@ -54,8 +55,8 @@
                 <div class="right-menu">
                     <span>
                         <p data-lang="basedOnFullStack">
-                            Based on fullstack,<br>
-                            I make website for <b>small business</b> or <b>personal project</b>.
+                            <span onclick="kikiHasSpawned()" style="cursor: copy;">Based</span> on fullstack,<br>
+                            I make website for <b><span onclick="kikiHasGrued()">small</span> business</b> or <b>personal project</b>.
                         </p>
                         <button data-lang="btnGoToBlmsWebsite" onclick="window.open('https://blms.fr/')">My website : Bloom's Studio</button>
                         <button data-lang="btnCheckMyWork" onclick="moveSect('work');">Check my works</button>
