ajout language pour About + ajout error system pour le language system

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h2 data-lang="myNameIs">My name is <span>Yohan</span></h2>
                         <h2 data-lang="iMaFrenchDev">I am a <span>french developper</span><b onclick="baguette();">.</b></h2>
                     </span>
-                    <button data-lang="btnSeeMore">See more</button>
+                    <button data-lang="btnSeeMore" onclick="moveSect('about')">See more</button>
                 </div>
                 <div class="right-menu">
                     <span>
@@ -86,8 +86,8 @@
                     <p data-lang="whoAmIDesc">
                         I am a french developper, I am <b class="setMyAge">19</b> years old and I am currently in high school in BTS SIO, SLAM option (<a href="#school-sect">check more here</a>).<br>
                         I am passionate about computer science and I am constantly learning to improve my knowledge.<br>
-                        In parallel, I am a firefighter in the volunteer fire department of my city.<br>
-                        I am owner of a small organization, Bloom's Studio, where I work for small business or personal project with a friend.
+                        Also, I volunteer as a firefighter in fire department of my city.<br>
+                        I am the owner of a small organization, Bloom's Studio, where I work for small businesses or personal projects with a friend.
                     </p>
                 </div>
                 <div class="card">
@@ -98,7 +98,7 @@
                         <h3>| <a data-lang="btnGoToMySkills" href="#langu-sect">My languages</a></h3>
                     </span>
                     <p data-lang="mySkillsDesc">
-                        I am a fullstack developper, so I principally make website but I can also make desktop application, and I currently learn to make mobile application.<br>
+                        I am a fullstack developer, so I principally make website but I can also make desktop application, and I currently learn to make mobile application.<br>
                         To video games player, I also make Discord bot and I will soon learn to how to make a video game.
                     </p>
                 </div>
