ajout 'mail' à Contact Sect

--- a/index.html
+++ b/index.html
@@ -404,7 +404,9 @@
             <div class="container">
                 <div class="header">
                     <h1 data-lang="contactMe">Contact me</h1>
-                    <span></span>
+                    <span>
+                        <a style="color: aqua;" href="mailto:yohan.carvalho50@gmail.com">yohan.carvalho50@gmail.com</a>
+                    </span>
                 </div>
                 <hr>
                 <div class="content">
