ajout & correc global

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <div class="card">
                         <img src="assets/img/cLanguage/phpstorm.png" alt="PhpStorm">
-                        <h2>PhpStorm / Webstorm</h2>
+                        <h2>PhpStorm / WebStorm</h2>
                     </div>
                     <div class="card">
                         <img src="assets/img/cLanguage/android-studio.png" alt="IntelliJ">
@@ -217,11 +217,11 @@
                     </div>
                     <div class="card">
                         <img src="assets/img/cLanguage/office.png" alt="Pack Office">
-                        <h2>Office Pack</h2>
+                        <h2>Pack Office</h2>
                     </div>
                     <div class="card">
                         <i class="yeet fa-brands fa-google"></i>
-                        <h2>Google Pack</h2>
+                        <h2>Pack Google</h2>
                     </div>
                 </div>
             </div>
@@ -396,6 +396,13 @@
                 <div class="card">
                     <i class="fa-brands fa-google"></i>
                 </div>
+                <div class="card">
+                    <i class="fa-brands fa-pinterest"></i>
+                </div>
+            </div>
+            <br>
+            <div class="contain">
+                <img src="assets/img/tech-watch/fav-chrome.png" alt="">
             </div>
         </section>
 
