ajout déplacement via clavier & anim sur left-menu

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <!-- LEFT MENU -->
     <menu id="left-menu">
         <ul id="menu">
-            <li onclick="moveSect('profile');" class="menuIcon"><i class="fa-solid fa-user"></i></li>
-            <li onclick="moveSect('about')" class="menuIcon"><i class="fa-solid fa-address-card"></i></li>
-            <li onclick="moveSect('skills');" class="menuIcon"><i class="fa-solid fa-code"></i></li>
-            <li onclick="moveSect('skills2');" class="menuIcon"><i class="fa-solid fa-cogs"></i></li>
-            <li onclick="moveSect('softskills');" class="menuIcon"><i class="fa-solid fa-brain"></i></li>
-            <li onclick="moveSect('school');" class="menuIcon"><i class="fa-solid fa-school"></i></li>
-            <li onclick="moveSect('cont-studies');" class="menuIcon"><i class="fa-solid fa-graduation-cap"></i></li>
-            <li onclick="moveSect('exp');" class="menuIcon"><i class="fa-solid fa-flask"></i></li>
-            <li onclick="moveSect('work');" class="menuIcon"><i class="fa-solid fa-briefcase"></i></li>
-            <li onclick="moveSect('tech-watch');" class="menuIcon"><i class="fa-solid fa-microchip"></i></li>
-            <li onclick="moveSect('contact');" class="menuIcon"><i class="fa-solid fa-address-book"></i></li>
+            <li id="nav-profile" onclick="moveSect('profile');" class="menuIcon"><i class="fa-solid fa-user"></i></li>
+            <li id="nav-about" onclick="moveSect('about')" class="menuIcon"><i class="fa-solid fa-address-card"></i></li>
+            <li id="nav-skills" onclick="moveSect('skills');" class="menuIcon"><i class="fa-solid fa-code"></i></li>
+            <li id="nav-skills2" onclick="moveSect('skills2');" class="menuIcon"><i class="fa-solid fa-cogs"></i></li>
+            <li id="nav-softskills" onclick="moveSect('softskills');" class="menuIcon"><i class="fa-solid fa-brain"></i></li>
+            <li id="nav-school" onclick="moveSect('school');" class="menuIcon"><i class="fa-solid fa-school"></i></li>
+            <li id="nav-cont-studies" onclick="moveSect('cont-studies');" class="menuIcon"><i class="fa-solid fa-graduation-cap"></i></li>
+            <li id="nav-exp" onclick="moveSect('exp');" class="menuIcon"><i class="fa-solid fa-flask"></i></li>
+            <li id="nav-work" onclick="moveSect('work');" class="menuIcon"><i class="fa-solid fa-briefcase"></i></li>
+            <li id="nav-tech-watch" onclick="moveSect('tech-watch');" class="menuIcon"><i class="fa-solid fa-microchip"></i></li>
+            <li id="nav-contact" onclick="moveSect('contact');" class="menuIcon"><i class="fa-solid fa-address-book"></i></li>
             <li onclick="openLangPanel();" id="noot" class="sel-language">
                 <img id="currentLanguage" src="https://asset.blms.fr/picture/flag/en.png" alt="Flag En">
                 <input type="hidden" id="currentLanguageInp" value="en">
