--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio - Yohan</title>
     <link rel="icon" href="https://asset.blms.fr/logo/favicon.png">
     <!-- CSS Global -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css?v=1">
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/1224050b85.js" crossorigin="anonymous"></script>
 </head>
