ajout myExpe page

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 </div>
             </div>
             <br>
-            <button data-lang="btnGoToAllMyWorks" onclick="window.open('https://project.blms.fr/exper/')">Check all my public works</button>
+            <button data-lang="btnGoToAllMyWorks" onclick="window.location.href='myexpe.html'">Check all my works</button>
         </section>
 
         <!-- Veille technologique -->
